[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-asset-strategy-platform"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "libs*", "services*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js"]

[tool.isort]
profile = "black"
skip = [".venv", ".venv311", "venv", "__pycache__"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
exclude = '''
/(
    \.venv
  | \.venv311
  | venv
  | __pycache__
)/
'''
