[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-asset-strategy-platform"
version = "5.2.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "libs*", "services*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js"]

[tool.isort]
profile = "black"
skip = [".venv", ".venv311", "venv", "__pycache__"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
exclude = '''
/(
    \.venv
  | \.venv311
  | venv
  | __pycache__
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [".venv", ".venv311", "venv", "__pycache__", ".git"]

[tool.ruff.lint]
# Ignore common legacy code issues
ignore = [
    "E402",  # module level import not at top of file
    "E721",  # type comparison (use isinstance instead)
    "E722",  # bare except
    "E741",  # ambiguous variable name
    "E501",  # line too long (handled by black)
    "F401",  # unused import (may be intentional re-exports)
    "F821",  # undefined name (many false positives in research scripts)
    "F841",  # unused variable
]
